[package]
name = "name-service"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
production = []

[dependencies]
arrayref = "0.3.6"
enum_dispatch = "0.3.7"
bytemuck = "1.7.2"
borsh = "0.9.1"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.4"
thiserror="1.0"
solana-program = "1.10.15"
spl-math = { version = "0.1", features = [ "no-entrypoint" ] }
spl-token = { version = "3.3", features = [ "no-entrypoint" ] }

[dev-dependencies]
solana-sdk = "1.10.15"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]